# lab_08

./: CMakeLists.txt  CPackConfig.cmake  Dockerfile  LICENSE  README.md
.github/workflows/: conf.yml
banking/: Account.h  CMakeLists.txt
tests/: tcov.cpp
